--- a/examples/rails-react-example/Gemfile
+++ b/examples/rails-react-example/Gemfile
@@ -15,8 +15,8 @@ gem "webpacker"
 
 gem "sass-rails"
 
-# Use sqlite3 as the database for Active Record
-gem "sqlite3"
+# Use pg as the database for Active Record
+gem "pg", "~> 1.1"
 
 # Use the Puma web server [https://github.com/puma/puma]
 gem "puma", "~> 5.6"
