Add system tests

--- a/examples/rails-react-example/test/fixtures/tickets.yml
+++ b/examples/rails-react-example/test/fixtures/tickets.yml
@@ -3,13 +3,90 @@
 one:
   title: MyString
   content: MyText
-  ticket_type: MyString
+  ticket_type: new
   user_name: MyString
-  user_image: MyString
+  user_image: https://randomuser.me/api/portraits/women/99.jpg
 
 two:
   title: MyString
   content: MyText
-  ticket_type: MyString
+  ticket_type: awaiting_feedback
   user_name: MyString
-  user_image: MyString
+  user_image: https://randomuser.me/api/portraits/women/99.jpg
+
+mob0:
+  title: MyString
+  content: MyText
+  ticket_type: new
+  user_name: MyString
+  user_image: https://randomuser.me/api/portraits/women/99.jpg
+
+mob1:
+  title: MyString
+  content: MyText
+  ticket_type: new
+  user_name: MyString
+  user_image: https://randomuser.me/api/portraits/women/99.jpg
+
+mob2:
+  title: MyString
+  content: MyText
+  ticket_type: new
+  user_name: MyString
+  user_image: https://randomuser.me/api/portraits/women/99.jpg
+
+mob3:
+  title: MyString
+  content: MyText
+  ticket_type: new
+  user_name: MyString
+  user_image: https://randomuser.me/api/portraits/women/99.jpg
+
+mob4:
+  title: MyString
+  content: MyText
+  ticket_type: new
+  user_name: MyString
+  user_image: https://randomuser.me/api/portraits/women/99.jpg
+
+mob5:
+  title: MyString
+  content: MyText
+  ticket_type: new
+  user_name: MyString
+  user_image: https://randomuser.me/api/portraits/women/99.jpg
+
+mob6:
+  title: MyString
+  content: MyText
+  ticket_type: new
+  user_name: MyString
+  user_image: https://randomuser.me/api/portraits/women/99.jpg
+
+mob7:
+  title: MyString
+  content: MyText
+  ticket_type: new
+  user_name: MyString
+  user_image: https://randomuser.me/api/portraits/women/99.jpg
+
+mob8:
+  title: MyString
+  content: MyText
+  ticket_type: new
+  user_name: MyString
+  user_image: https://randomuser.me/api/portraits/women/99.jpg
+
+mob9:
+  title: MyString
+  content: MyText
+  ticket_type: new
+  user_name: MyString
+  user_image: https://randomuser.me/api/portraits/women/99.jpg
+
+mob10:
+  title: MyString
+  content: MyText
+  ticket_type: new
+  user_name: MyString
+  user_image: https://randomuser.me/api/portraits/women/99.jpg
